--- a/caja-chica.html
+++ b/caja-chica.html
@@ -111,9 +111,9 @@
     <div class="slick-top">
         <div>
             <figure>
-                <img src="img/banners/01.jpg" alt="Titulo" class="img-center img-responsive">
+                <img src="img/banners/02.jpg" alt="Titulo" class="img-center img-responsive">
                 <figcaption>
-                    <h2>salcobrand: mi empresa</h2>
+                    <h2>caja chica</h2>
                     <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr. </p>
                 </figcaption>
             </figure>
@@ -126,10 +126,36 @@
 
     <div class="container contenido interno">
         <div class="row">
-            <!-- content -->
+            <!-- content --><!-- side -->
+            <div class="col-md-3 col-md-offset-1 side-zone">
+                <h2>GESTIÓN DIARIA</h2>
+                <div class="the-colors">
+                    <span class="one"></span>
+                    <span class="two"></span>
+                    <span class="three"></span>
+                    <span class="four"></span>
+                </div>
+                <ul class="side-nav">
+                    <li class="active"><a href="#">Caja Chica</a></li>
+                    <li><a href="#">Valija</a></li>
+                    <li><a href="#">Movilidad</a></li>
+                    <li><a href="#">Informa Apagado de Pos</a></li>
+                    <li><a href="#">Horas Extras</a></li>
+                    <li><a href="#">Sistema ATO</a>
+                        <ul class="sub-side-nav">
+                            <li><a href="#">Manual de Usuario</a></li>
+                            <li><a href="#">Manual Notificador ATO</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="#">Horas no justificadas</a></li>
+                    <li><a href="#">Registro complementario</a></li>
+                    <li><a href="#">E Ticket</a></li>
+                    <li><a href="#">Plantilla de resultados</a></li>
+                </ul>
+            </div>
             <div class="col-md-8">
                 <div class="text-left">
-                    <h2>HISTORIA</h2>
+                    <h2>Buscador de solicitud restitución de Caja Chica</h2>
                 </div>
                 <div class="the-colors">
                     <span class="one"></span>
@@ -137,175 +163,46 @@
                     <span class="three"></span>
                     <span class="four"></span>
                 </div>
-                <article>
-                    <div class="row">
-                        <div class="col-md-5">
-                            <figure class="img-sombra">
-                                <img src="img/historia.jpg" alt="Historia" class="img-responsive img-center">
-                            </figure>
-                        </div>
-                        <div class="col-md-7">
-                            <p>En abril de 2012 dos grandes del retail y farmacéutica se unieron para ser, en conjunto, los líderes en salud, belleza y bienestar. Hoy, contamos con una organización a la cual todos pertenecemos, llamada Empresas SB.</p>
-                            <p>Dentro del holding de Empresas SB se encuentran importantes marcas:</p>
-                            <ul class="list">
-                                <li>PreUnic</li>
-                                <li>FarmaPrecio</li>
-                                <li>Pharma Benefits</li>
-                                <li>Salcobrand</li>
-                                <li>Medcell</li>
-                                <li>Inversiones</li>
-                                <li>Make Up</li>
-                                <li>Medipharm</li>
-                                <li>Recetario Magistral</li>
-                            </ul>
-                        </div>
-                    </div>
-                    <p>Además de tres empresas que prestan servicios a nuestra organización: Inmobiliaria, Matic Kard y Operadora de Cobranza. Entre todos, trabajamos unidos, porque ahora pertenecemos a un gran holding y una gran familia que vela por cumplir
-                        nuestro propósito: </p>
-                    <div class="ticket">
-                        “Hacemos que las personas se sientan bien creando lo mejor en salud, belleza y bienestar”.
-                    </div>
-                </article>
-                <div class="text-left">
-                    <h2>VISIÓN</h2>
-                </div>
-                <div class="the-colors">
-                    <span class="one"></span>
-                    <span class="two"></span>
-                    <span class="three"></span>
-                    <span class="four"></span>
-                </div>
-                <article>
-                    <p>Empresas SB será el año 2017, el referente en Salud, Belleza y Bienestar. Con una oferta ampliada e innovadora para nuestros clientes, generando con ellos un vínculo permanente de confianza y lealtad, comprometidos con la comunidad,
-                        en un ambiente laboral de alto desempeño, con una gestión basada en los colaboradores orgullosos y flexibles al cambio, logrando la rentabilidad esperada por los accionistas con presencial global.</p>
-                </article>
-                <div class="text-left">
-                    <h2>MISIÓN</h2>
-                </div>
-                <div class="the-colors">
-                    <span class="one"></span>
-                    <span class="two"></span>
-                    <span class="three"></span>
-                    <span class="four"></span>
-                </div>
-                <article>
-                    <p>Empresas SB se define como una empresa dedicada principalmente a la salud, belleza y bienestar de las personas, ofreciendo a la comunidad productos y servicios con procesos de alta eficiencia operacional y excelencia en la calidad.
-                        Con una permanente innovación tecnológica, prudentes políticas de administración de riesgos y exigentes estándares éticos, los que deben ser respetados por todas las personas que se desempeñan en la empresa. En este marco y con
-                        el propósito de cumplir sus objetivos y políticas</p>
-                </article>
-                <div class="text-left">
-                    <h2>NUESTROS VALORES</h2>
-                </div>
-                <div class="the-colors">
-                    <span class="one"></span>
-                    <span class="two"></span>
-                    <span class="three"></span>
-                    <span class="four"></span>
-                </div>
-                <article>
-                    <img src="img/valores-ico.png" alt="Titulo" class="img-center img-responsive">
-                    <div class="clear30"></div>
-                    <div class="row">
-                        <div class="col-md-10 col-md-offset-1">
-                            <div class="row">
-                                <div class="col-md-6">
-                                    <img src="img/seguridad.png" alt="Seguridad" class="img-responsive img-center">
-                                </div>
-                                <div class="col-md-6">
-                                    <img src="img/servicio.png" alt="Servicio" class="img-responsive img-center">
-                                </div>
-                                <div class="clear20"></div>
-                                <div class="col-md-6">
-                                    <img src="img/confianza.png" alt="Confianza" class="img-responsive img-center">
-                                </div>
-                                <div class="col-md-6">
-                                    <img src="img/eficiencia.png" alt="Eficiencia" class="img-responsive img-center">
-                                </div>
+                <article class="form-zone">
+                    <form>
+                        <div class="row">
+                            <div class="col-md-4">
+                                <label>Indique N° de folio *</label>
+                                <input type="text" class="form-control">
+                            </div>
+                            <div class="col-md-4">
+                                <label>Seleccione Local *</label>
+                                <select class="form-control">
+                                    <option value="">1</option>
+                                    <option value="">2</option>
+                                    <option value="">3</option>
+                                    <option value="">4</option>
+                                </select>
+                            </div>
+                            <div class="col-md-4">
+                                <label>Seleccione Estado *</label>
+                                <select class="form-control">
+                                    <option value="">1</option>
+                                    <option value="">2</option>
+                                    <option value="">3</option>
+                                    <option value="">4</option>
+                                </select>
+                            </div>
+                            <div class="col-md-6">
+                                <label>Indique Fecha desde *</label>
+                                <input type="date" class="form-control">
+                            </div>
+                            <div class="col-md-6">
+                                <label>Indique Fecha hasta *</label>
+                                <input type="date" class="form-control">
                             </div>
                         </div>
-                    </div>
+                        <input type="submit" class="btn btn-site" value="Iniciar busqueda">
+                        
+                    </form>
                 </article>
             </div>
-            <!-- side -->
-            <div class="col-md-3 col-md-offset-1 side-zone">
-                <div class="text-center">
-                    <h2>DESTACADOS</h2>
-                </div>
-                <div class="the-colors">
-                    <span class="one"></span>
-                    <span class="two"></span>
-                    <span class="three"></span>
-                    <span class="four"></span>
-                </div>
-                <article>
-                    <figure>
-                        <img src="img/destacados/01.jpg" alt="Titulo" class="img-center img-responsive">
-                        <figcaption>
-                            <h5>Lorem Ipsum</h5>
-                            <p>Vivamus aliquet viverra enim, sit amet mollis ex placerat quis...</p>
-                        </figcaption>
-                        <div class="text-right"><a href="#" class="btn-site">ver más</a></div>
-                    </figure>
-                </article>
-                <article>
-                    <figure>
-                        <img src="img/destacados/02.jpg" alt="Titulo" class="img-center img-responsive">
-                        <figcaption>
-                            <h5>Lorem Ipsum</h5>
-                            <p>Vivamus aliquet viverra enim, sit amet mollis ex placerat quis...</p>
-                        </figcaption>
-                        <div class="text-right"><a href="#" class="btn-site">ver más</a></div>
-                    </figure>
-                </article>
-                <article>
-                    <figure>
-                        <img src="img/destacados/03.jpg" alt="Titulo" class="img-center img-responsive">
-                        <figcaption>
-                            <h5>Lorem Ipsum</h5>
-                            <p>Vivamus aliquet viverra enim, sit amet mollis ex placerat quis...</p>
-                        </figcaption>
-                        <div class="text-right"><a href="#" class="btn-site">ver más</a></div>
-                    </figure>
-                </article>
-                <article>
-                    <figure>
-                        <img src="img/destacados/04.jpg" alt="Titulo" class="img-center img-responsive">
-                        <figcaption>
-                            <h5>Lorem Ipsum</h5>
-                            <p>Vivamus aliquet viverra enim, sit amet mollis ex placerat quis...</p>
-                        </figcaption>
-                        <div class="text-right"><a href="#" class="btn-site">ver más</a></div>
-                    </figure>
-                </article>
-
-                <div class="clear20"></div>
-
-                <div class="text-center">
-                    <h2>GALERÍA</h2>
-                </div>
-                <div class="the-colors">
-                    <span class="one"></span>
-                    <span class="two"></span>
-                    <span class="three"></span>
-                    <span class="four"></span>
-                </div>
-                <article class="galeria">
-                    <div class="row">
-                        <div class="col-md-6">
-                            <a href="#"><img src="img/galeria/01.jpg" alt="Galería" class="img-center img-responsive"></a>
-                        </div>
-                        <div class="col-md-6">
-                            <a href="#"><img src="img/galeria/02.jpg" alt="Galería" class="img-center img-responsive"></a>
-                        </div>
-                        <div class="col-md-6">
-                            <a href="#"><img src="img/galeria/03.jpg" alt="Galería" class="img-center img-responsive"></a>
-                        </div>
-                        <div class="col-md-6">
-                            <a href="#"><img src="img/galeria/04.jpg" alt="Galería" class="img-center img-responsive"></a>
-                        </div>
-                    </div>
-                </article>
-            </div>
+            
         </div>
     </div>
 
